# perfeed

./: .env.example  noxfile.py  pyproject.toml
.github/workflows/: test.yml
src/: config_loader.py
src/github/: models.py  provider.py
src/llms/: base_client.py  ollama_client.py  openai_client.py
src/settings/: pr_summary_prompts.toml
src/tools/: pr_summarizer.py
src/utils/: llm_endpoint.py  tokenizer.py
tests/: test_github_model.py  test_github_provider.py  test_llm_enpoint.py
