[tool.poetry]
name = "perfeed"
version = "0.1.0"
description = "Personalized, AI assistant that runs with your engineering teams"
authors = ["Perfeed Core"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
fastai = "^2.7.17"
ghapi = "^1.0.6"
openai = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
